--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery-selectric": "^1.10.1",
-    "rangeslider.js": "^2.2.1"
+    "rangeslider.js": "^2.2.1",
+    "jquery-fontsampler": "~0.0.1"
   }
 }
