--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ bower_components/jquery-form-validator/*
 !bower_components/jquery-form-validator/form-validator/
 bower_components/jquery-form-validator/form-validator/*
 !bower_components/jquery-form-validator/form-validator/jquery.form-validator.js
+!bower_components/jquery-form-validator/form-validator/file.js
 
 !bower_components/jquery-fontsampler/
 bower_components/jquery-fontsampler/*
