--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "jquery-fontsampler": "~0.0.4",
     "jquery-form-validator": "git://github.com/kontur/jQuery-Form-Validator.git#439bd530967c96ac4156b4ec010a7cd674f15cc3",
     "specimen-tools": "https://github.com/kontur/specimenTools.git#fontsampler",
-    "clipboard": "^1.7.1"
+    "clipboard": "^1.7.1",
+    "jquery-validation": "jquery-validate#^1.17.0"
   }
 }
