--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "jquery-selectric": "^1.10.1",
-    "rangeslider.js": "^2.2.1",
+    "rangeslider.js": "https://github.com/kontur/rangeslider.js.git#master",
     "jquery-fontsampler": "~0.0.6",
     "jquery-form-validator": "git://github.com/kontur/jQuery-Form-Validator.git#439bd530967c96ac4156b4ec010a7cd674f15cc3",
     "specimen-tools": "https://github.com/kontur/specimenTools.git#fontsampler",
