--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "homepage": "https://github.com/kontur/fontsampler-wordpress-plugin",
   "devDependencies": {
     "browserify": "^16.2.3",
-    "fontsampler-js": "file:../../../../../Packages/fontsampler-js",
+    "fontsampler-js": "^0.0.15",
     "npm-watch": "^0.3.0",
     "uglify-js": "^3.5.4"
   }
