--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
   "homepage": "https://github.com/kontur/fontsampler-wordpress-plugin",
   "devDependencies": {
     "browserify": "^16.2.3",
-    "fontsampler-js": "^0.0.15",
     "npm-watch": "^0.3.0",
     "uglify-js": "^3.5.4"
+  },
+  "dependencies": {
+    "fontsampler-js": "^0.1.1",
+    "watchify": "^4.0.0"
   }
 }
